Runtime.exec use an array of arguments instead of executing a string